Añadida pantalla records (sin terminar)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Whacamole">
         <activity
+            android:name=".Records"
+            android:exported="false" />
+        <activity
             android:name=".Opciones"
             android:exported="false" />
         <activity
